cambio en la moneda

--- a/Cargar_Productos.html
+++ b/Cargar_Productos.html
@@ -10,7 +10,7 @@
             // Verifica que el precio sea al menos 100
             const price = parseFloat(formData.get('precio'));
             if (isNaN(price) || price < 100) {
-                alert('El precio debe ser al menos 100 MXN.');
+                alert('El precio debe ser al menos 100 RD$.');
                 return;
             }
 
